selfhost/test/typechecker/accessor/error_unknown_enum_variant.1.out
Error at %FILE_NAME%:3:13
Unknown field 'Baz'
  |  val f = Foo.Baz
                 ^
No field 'Baz' found on type <#enum Foo>
